force-app/main/default/objects/Recurrings__c/Recurrings__c.object-meta.xml
<CustomObject>
    <label>Recurring</label>
    <nameField>
        <label>Recurrings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurrings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>