force-app/main/default/objects/Recurrings__c/fields/Discount_to_Apply__c.field-meta.xml
<CustomField>
    <fullName>Discount_to_Apply__c</fullName>
    <label>Discount to Apply</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>