force-app/main/default/objects/Recurrings__c/fields/First_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Date__c</fullName>
    <label>First Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>