force-app/main/default/objects/Recurrings__c/fields/isSalesforce__c.field-meta.xml
<CustomField>
    <fullName>isSalesforce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSalesforce</label>
    <type>Checkbox</type>
</CustomField>