force-app/main/default/objects/Recurrings__c/fields/Manual_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Manual_Product_Name__c</fullName>
    <label>Manual Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>