force-app/main/default/objects/Recurrings__c/fields/ManualPrice__c.field-meta.xml
<CustomField>
    <fullName>ManualPrice__c</fullName>
    <label>Manual Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>