force-app/main/default/objects/Recurrings__c/fields/Next_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Date__c</fullName>
    <label>Next order generation date</label>
    <type>Date</type>
</CustomField>