force-app/main/default/objects/Recurrings__c/fields/Next_delivery_date__c.field-meta.xml
<CustomField>
    <fullName>Next_delivery_date__c</fullName>
    <formula>Next_Date__c  + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next delivery date</label>
    <type>Date</type>
</CustomField>