force-app/main/default/objects/Recurrings__c/fields/PO_from_Supplier__c.field-meta.xml
<CustomField>
    <fullName>PO_from_Supplier__c</fullName>
    <inlineHelpText>PO number from the Supplier to FM</inlineHelpText>
    <label>PO from Supplier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>