force-app/main/default/objects/Recurrings__c/fields/Rec__c.field-meta.xml
<CustomField>
    <fullName>Rec__c</fullName>
    <label>Recurrence Interval</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Week</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>