force-app/main/default/objects/Recurrings__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Suppliers__c</referenceTo>
    <relationshipLabel>Recurrings</relationshipLabel>
    <relationshipName>Recurrings</relationshipName>
    <type>Lookup</type>
</CustomField>