force-app/main/default/objects/Recurrings__c/validationRules/FirstDate_must_be_before_1030_if_today.validationRule-meta.xml
<ValidationRule>
    <fullName>FirstDate_must_be_before_1030_if_today</fullName>
    <active>false</active>
    <description>If first date = today it must be before 1030 am (this is when the recurring job runs)</description>
    <errorConditionFormula>AND( TIMENOW()&gt; TIMEVALUE(&quot;10:30:00.00&quot;),  First_Date__c  &lt;= TODAY())</errorConditionFormula>
    <errorMessage>The recurring job has already run today, please create the order manually and set the first date to the next recurrence of the order.</errorMessage>
</ValidationRule>