force-app/main/default/objects/Recurrings__c/validationRules/Orders_for_3rd_party_supp_must_be_Invoic.validationRule-meta.xml
<ValidationRule>
    <fullName>Orders_for_3rd_party_supp_must_be_Invoic</fullName>
    <active>false</active>
    <description>Orders for 3rd party suppliers must be set to the type of &quot;Invoicing&quot; otherwise the customer won&apos;t get charged</description>
    <errorConditionFormula>AND(Supplier__r.Name &lt;&gt; &quot;First Mile Ltd&quot;,
ISPICKVAL( Type__c , &quot;Delivery&quot;), 
NOT(CONTAINS(Product__r.Name , &quot;Clearance&quot;)))</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>Orders for 3rd party suppliers must be set to the type of &quot;Invoicing&quot; otherwise the customer won&apos;t get charged.</errorMessage>
</ValidationRule>