force-app/main/default/objects/Recurrings__c/validationRules/Partner_products_must_be_Invoiced.validationRule-meta.xml
<ValidationRule>
    <fullName>Partner_products_must_be_Invoiced</fullName>
    <active>true</active>
    <description>You can only use Partner products if the Type is &apos;Invoicing&apos;</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Type__c, &quot;Delivery&quot;),
    CONTAINS(Product__r.Name, &quot;(P)&quot;),
    OR(
        ISBLANK(Supplier__c),
        NOT(Supplier__r.IsExternal__c)
    )
)</errorConditionFormula>
    <errorMessage>You can only use Partner products with External Suppliers.</errorMessage>
</ValidationRule>