force-app/main/default/objects/Recurrings__c/validationRules/PO_Number_required.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_Number_required</fullName>
    <active>true</active>
    <errorConditionFormula>if (( Account__r.PO_Required__c == TRUE || Account__r.Parent.PO_Required__c == TRUE) &amp;&amp; ISBLANK(PO_Number__c), TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>PO_Number__c</errorDisplayField>
    <errorMessage>PO Number is required for this recurring order.</errorMessage>
</ValidationRule>