force-app/main/default/objects/Recurrings__c/validationRules/Pricebook_is_empty_or_not_active.validationRule-meta.xml
<ValidationRule>
    <fullName>Pricebook_is_empty_or_not_active</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Price_Book__c) ||  Price_Book__r.IsActive == FALSE</errorConditionFormula>
    <errorDisplayField>Price_Book__c</errorDisplayField>
    <errorMessage>You must pick an active Price Book</errorMessage>
</ValidationRule>