force-app/main/default/objects/Recurrings__c/validationRules/RequireActiveProduct.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireActiveProduct</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Active__c, OR(ISBLANK(Product__c), NOT(Product__r.IsActive)))</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>An active Product is required.</errorMessage>
</ValidationRule>