force-app/main/default/objects/Recurrings__c/validationRules/RequireFacility.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireFacility</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(Product__r.Product_Type__c, &apos;Collection&apos;), ISBLANK(Facility__c))</errorConditionFormula>
    <errorDisplayField>Facility__c</errorDisplayField>
    <errorMessage>Facility is required for Recurring Collection.</errorMessage>
</ValidationRule>