force-app/main/default/objects/Recurrings__c/validationRules/RequirePriceOrDiscount.validationRule-meta.xml
<ValidationRule>
    <fullName>RequirePriceOrDiscount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(ManualPrice__c), ISBLANK(TEXT(Discount_to_Apply__c)))</errorConditionFormula>
    <errorDisplayField>Discount_to_Apply__c</errorDisplayField>
    <errorMessage>Enter either Manual Price or Discount to Apply.</errorMessage>
</ValidationRule>