force-app/main/default/objects/Recurrings__c/validationRules/RestrictDiscountToApply.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictDiscountToApply</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    AND(NOT(ISBLANK(ManualPrice__c)), NOT(ISBLANK(TEXT(Discount_to_Apply__c)))),
    AND(ISBLANK(ManualPrice__c), ISBLANK(TEXT(Discount_to_Apply__c)))
)</errorConditionFormula>
    <errorDisplayField>Discount_to_Apply__c</errorDisplayField>
    <errorMessage>A Recurring Order must have either a Manual Price or a Discount to Apply, but not both and not neither.</errorMessage>
</ValidationRule>