force-app/main/default/objects/Recurrings__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>Next_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PO_Number__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Product__c</field>
        <operation>contains</operation>
        <value>medium food sack</value>
    </filters>
    <filters>
        <field>Quantity__c</field>
        <operation>lessThan</operation>
        <value>50</value>
    </filters>
    <label>All active recurrings</label>
</ListView>