force-app/main/default/objects/Recurrings__c/listViews/Copy_of_All_active_recurrings.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_active_recurrings</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>Next_Date__c</columns>
    <columns>Price_Book__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Next_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Recurrings Overdue to Generate</label>
</ListView>