force-app/main/default/objects/Recurrings__c/listViews/Inactive_recurrings.listView-meta.xml
<ListView>
    <fullName>Inactive_recurrings</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Inactive recurrings</label>
</ListView>