force-app/main/default/objects/Recurrings__c/listViews/Recurring_today.listView-meta.xml
<ListView>
    <fullName>Recurring_today</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Product__c</columns>
    <columns>Next_Date__c</columns>
    <columns>Last_Working_Day__c</columns>
    <columns>First_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Next_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Recurring today</label>
</ListView>