force-app/main/default/objects/Recurrings__c/listViews/Recurrings_In_The_Past.listView-meta.xml
<ListView>
    <fullName>Recurrings_In_The_Past</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Next_Date__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Next_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Recurrings In The Past</label>
</ListView>